--- a/src/assets/scss/02_molecule/_contact-info.scss
+++ b/src/assets/scss/02_molecule/_contact-info.scss
@@ -15,6 +15,8 @@
         a {
             @include font-size("medium");
             @include line-height(36px);
+            font-family: $font-primary;
+            font-weight: 100;
             color: get-color("primary", "white");
             text-decoration: underline;
             display: block;
