--- a/src/assets/scss/05_page/_contact-page.scss
+++ b/src/assets/scss/05_page/_contact-page.scss
@@ -16,7 +16,7 @@
                 color: get-color("primary", "fresh");
                 font-weight: 100;
                 font-size: 18px;
-                margin-bottom: 21px;
+                margin-bottom: 16px;
 
                 @include breakpoints("tablet") {
                     @include font-size(36px);
@@ -45,6 +45,7 @@
 
         h3 {
             margin-bottom: 0;
+            line-height: 24px;
 
             @include breakpoints("tablet") {
                 @include font-size(30px);
