--- a/src/assets/scss/00_base/_settings.scss
+++ b/src/assets/scss/00_base/_settings.scss
@@ -14,6 +14,14 @@ $no-gutter-grid: (
     gutter: 50px,
 );
 
+@media (max-width: 1280px) {
+
+  .o-rhythm__container {
+      box-sizing: border-box;
+      padding: 0 32px;
+  }
+}
+
 $breakpoints: (
     "phone":      480px,
     "sm-tablet":  600px,
