--- a/src/assets/scss/02_molecule/_contact-info.scss
+++ b/src/assets/scss/02_molecule/_contact-info.scss
@@ -7,9 +7,11 @@
     }
 
     &__address {
+        margin-bottom: 64px;
 
         @include breakpoints("tablet") {
             @include span-col(4);
+            margin-bottom: auto;
         }
 
         a {
@@ -18,9 +20,20 @@
             font-family: $font-primary;
             font-weight: 100;
             color: get-color("primary", "white");
-            text-decoration: underline;
-            display: block;
+            display: inline-block;
             margin-bottom: 20px;
+            position: relative;
+
+            &::after {
+                content: "";
+                display: block;
+                position: absolute;
+                height: 1px;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                background: get-color("primary", "white");
+            }
         }
     }
 
@@ -35,7 +48,11 @@
             display: inline-block;
             width: 20px;
             height: 20px;
-            margin-right: 20px;
+            margin-right: 36px;
+
+            @include breakpoints("tablet") {
+                margin-right: 20px;
+            }
 
             svg {
                 fill: get-color("neutral", "light-gray");
@@ -86,6 +103,10 @@
     }
 
     h6 {
-        margin-bottom: 60px;
+        margin-bottom: 32px;
+
+        @include breakpoints("tablet") {
+            margin-bottom: 60px;
+        }
     }
 }
