Feature/homepage mobile (#10)
* Beginning to create the contact page.

* Continuing to build out the contact page.

* adding contact-info block

* adding careers

* Working on the slider.

* Made component for slider.

* Finished up the contact page.

* Fixed some formatting.

* fixing per PR comments

* adjusting slider positioning

* making map full width

* fixing careers on mobile

* mobile homepage changes

Co-authored-by: rolfers <50203110+rolfers@users.noreply.github.com>

--- a/src/assets/scss/02_molecule/__molecules.scss
+++ b/src/assets/scss/02_molecule/__molecules.scss
@@ -2,6 +2,8 @@
   MOLECULES
 \*------------------------------------*/
 @import "button-row",
+        "careers", 
+        "contact-info", 
         "header",
         "footer", 
         "fieldset",
