--- a/src/assets/scss/03_organism/_hero.scss
+++ b/src/assets/scss/03_organism/_hero.scss
@@ -18,26 +18,27 @@
     }
 
     &__top {
-        margin-bottom: 200px;
-        padding-top: 100px;
+        margin-bottom: 84px;
+        padding-top: 240px;
 
         @include breakpoints("tablet") {
+            margin-bottom: 200px;
             padding-top: 218px;
         }
     }
 
     &__titles {
-        margin-top: 60px;
-        max-width: 800px; 
+        max-width: 800px;
         width: 100%;
 
         @include breakpoints("tablet") {
+            margin-top: 60px;
             padding-left: 160px;
         }
     }
 
     &__subtitles {
-        max-width: 800px; 
+        max-width: 800px;
         width: 100%;
 
         @include breakpoints("tablet") {
@@ -47,36 +48,46 @@
 
     &__background {
         position: absolute;
-        
+
         &.-jigglydoo {
-            right: -120px;
+            right: auto;
+            left: 0;
             top: 60px;
             max-width: 75%;
 
             @include breakpoints("tablet") {
                 right: -24px;
+                left: auto;
                 top: -54px;
                 max-width: 800px;
             }
         }
 
         &.-blinky {
+            left: 56%;
+            top: 120px;
+            width: 40px; 
             display: none;
 
             @include breakpoints("tablet") {
                 display: block;
                 left: 40%;
                 top: 80px;
+                width: auto;
             }
         }
 
         &.-terrazo {
             display: none;
-            right: 0;
+            right: -130px;
             top: 100px;
+            width: 260px; 
 
             @include breakpoints("tablet") {
                 display: block;
+                right: 0;
+                top: 100px;
+                width: auto;
             }
         }
 
@@ -91,25 +102,49 @@
         }
 
         &.-greenblob {
-            display: none;
-            right: 180px;
-            top: 460px;
+            display: block;
+            right: 70px;
+            top: 360px;
             z-index: 1;
+            width: 92px; 
+
+            @include breakpoints("tablet") {
+                width: auto;
+                right: 180px;
+                top: 460px;
+            }
+        }
+
+        &.-dots {
+            top: 110px;
+            right: auto;
+            left: 70px;
+            width: 112px;
+
+            @include breakpoints("tablet") {
+                top: -40px;
+                left: auto;
+                right: 24%;
+                width: auto;
+            }
+        }
+
+        &.-circles-crosses {
+            display: none;
+            bottom: 0;
+            left: 260px;
 
             @include breakpoints("tablet") {
                 display: block;
             }
         }
 
-        &.-dots {
-            top: 50%;
-            right: -114px;
-            width: 200px;
+        &.-blue-paint {
+            display: none;
+            right: 506px;
 
             @include breakpoints("tablet") {
-                top: -40px;
-                right: 24%;
-                width: auto;
+                display: block;
             }
         }
     }
@@ -122,7 +157,7 @@
                 content: '';
                 background: url('../../../static/img/asterisk.png') no-repeat center center / contain;
                 height: 24px;
-                width: 24px; 
+                width: 24px;
                 display: inline-block;
                 vertical-align: top;
                 margin-left: 6px;
@@ -133,7 +168,7 @@
 
     h3 {
         margin: 0 0 80px 0;
-        
+
         @include breakpoints("tablet") {
             margin: 0 0 280px 0;
         }
@@ -141,11 +176,11 @@
 
     h6 {
         @include font-size(14px);
-        color: get-color("neutral", "light-gray"); 
+        color: get-color("neutral", "light-gray");
         position: fixed;
         writing-mode: tb-rl;
         transform: rotate(-180deg);
-        top: 50%; 
+        top: 50%;
         left: 3%;
         display: none;
         word-spacing: 2em;
@@ -158,12 +193,15 @@
 
     p {
         position: relative;
-        float: right;
-        display: none;
         max-width: 144px;
+        margin-left: 50px; 
+        margin-top: 40px;
 
         @include breakpoints("tablet") {
             display: block;
+            float: right;
+            margin-left: 50px; 
+            margin-top: 40px;
         }
 
         &.-before {
