--- a/src/assets/scss/02_molecule/_contact-info.scss
+++ b/src/assets/scss/02_molecule/_contact-info.scss
@@ -1,6 +1,6 @@
 .m-contact-info {
     background: get-color("primary", "after-hours");
-    padding: 100px 0;
+    padding: 96px 0;
 
     @include breakpoints("tablet") {
         padding: 200px 0;
@@ -69,7 +69,7 @@
     }
 
     &__map {
-        margin: 140px 0;
+        margin: 136px 0;
         background: get-color("primary", "after-hours");
         width: 100%;
         position: relative;
@@ -80,12 +80,12 @@
     }
 
     &__directions {
-
         @include breakpoints("tablet") {
             @include span-col(8);
         }
 
         p {
+            @include line-height(32px);
             color: get-color("primary", "white");
         }
     }
