--- a/src/assets/scss/05_page/_contact-page.scss
+++ b/src/assets/scss/05_page/_contact-page.scss
@@ -15,12 +15,12 @@
             h2 {
                 @include font-size("smaller");
                 color: get-color("primary", "fresh");
-                font-weight: 100;
+                font-weight: 300;
                 margin-bottom: 16px;
 
                 @include breakpoints("tablet") {
                     @include font-size(36px);
-                    margin-bottom: 51px;
+                    margin-bottom: 12px;
                 }
             }
         }
@@ -32,6 +32,18 @@
                 margin-bottom: 112px;
             }
         }
+
+        // Mobile section divider
+        // &::after {
+        //     content: '';
+        //     display: block;
+        //     bottom: 0;
+        //     left: 0;
+        //     height: 2px;
+        //     position: absolute;
+        //     background: get-color("primary", "fresh");
+        //     width: 20px;
+        // }
     }
 
     .o-hero__subtitles {
