--- a/src/assets/scss/03_organism/_hero.scss
+++ b/src/assets/scss/03_organism/_hero.scss
@@ -15,9 +15,41 @@
 
     &.-case-study {
 
-        .o-hero__title, 
-        .o-hero__image, 
-        .o-hero__left, 
+        .o-hero__copy-container {
+            @include span-col(12);
+            @include font-size(20px);
+            font-weight: 300;
+
+            @include breakpoints("tablet") {
+                @include span-col(9);
+                @include font-size(36px);
+
+                position: relative;
+                top: -8px;
+            }
+        }
+
+        .o-hero__list {
+            list-style-type: none;
+            padding: 0;
+
+            li {
+                margin-bottom: 1em;
+            }
+
+            &-container {
+                @include span-col(12);
+
+                @include breakpoints("tablet") {
+                    @include span-col(1);
+                    @include push-col(2);
+                }
+            }
+        }
+
+        .o-hero__title,
+        .o-hero__image,
+        .o-hero__left,
         .o-hero__right {
             @include span-col(6);
         }
@@ -27,18 +59,21 @@
         }
 
         .o-hero__image {
-            
+
             img {
-                max-width: 99999px; 
+                max-width: 99999px;
             }
         }
 
         .o-hero__meta {
             color: get-color("primary", "white");
-            padding: 270px;
 
             h6 {
                 color: get-color("primary", "white");
+            }
+
+            @include breakpoints("tablet") {
+                padding: 270px;
             }
         }
     }
