Inserted the hero area images.

--- a/src/assets/scss/03_organism/_hero.scss
+++ b/src/assets/scss/03_organism/_hero.scss
@@ -59,8 +59,10 @@
         }
 
         .o-hero__image {
+            margin: 0;
 
             img {
+                display: block;
                 max-width: 99999px;
             }
         }
