Continuing to build out the Pulse case study.

--- a/src/assets/scss/02_molecule/__molecules.scss
+++ b/src/assets/scss/02_molecule/__molecules.scss
@@ -2,9 +2,10 @@
   MOLECULES
 \*------------------------------------*/
 @import "button-row",
-        "careers", 
-        "contact-info", 
+        "careers",
+        "contact-info",
         "header",
-        "footer", 
+        "footer",
         "fieldset",
-        "case-study";
+        "case-study",
+        "case-study-page-content";
