Continue working on implementing the pulse case study.

--- a/src/assets/scss/02_molecule/_case-study-page-content.scss
+++ b/src/assets/scss/02_molecule/_case-study-page-content.scss
@@ -57,5 +57,17 @@
                 }
             }
         }
+
+        .sketches {
+            position: relative;
+
+            &__one {
+                position: absolute;
+            }
+
+            &__two {
+                position: absolute;
+            }
+        }
     }
 }
