--- a/src/assets/scss/02_molecule/_footer.scss
+++ b/src/assets/scss/02_molecule/_footer.scss
@@ -27,7 +27,11 @@
 
     &__contact, 
     &__social {
-        display: inline-block;
+        display: block;
+
+        @include breakpoints("tablet") {
+            display: inline-block;
+        }
     }
 
     &__contact {
