--- a/src/assets/scss/03_organism/_hero.scss
+++ b/src/assets/scss/03_organism/_hero.scss
@@ -8,10 +8,13 @@
 
 .o-hero {
     position: relative;
-    background: -moz-linear-gradient(top, rgba(223,235,238,0.65) 0%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, rgba(223,235,238,0.65) 0%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, rgba(223,235,238,0.65) 0%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6dfebee', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
+
+    &.-gradient {
+        background: -moz-linear-gradient(top, rgba(223,235,238,0.65) 0%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
+        background: -webkit-linear-gradient(top, rgba(223,235,238,0.65) 0%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(to bottom, rgba(223,235,238,0.65) 0%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6dfebee', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
+    }
 
     &.-case-study {
 
@@ -106,11 +109,13 @@
     }
 
     &__subtitles {
-        max-width: 800px;
+        max-width: 100%;
         width: 100%;
 
         @include breakpoints("tablet") {
             padding-left: 160px;
+            width: 800px;
+            max-width: calc(100% - 160px);
         }
     }
 
@@ -249,7 +254,7 @@
         writing-mode: tb-rl;
         transform: rotate(-180deg);
         top: 50%;
-        left: 3%;
+        left: calc(3% + 23px);
         display: none;
         word-spacing: 2em;
         letter-spacing: .15em;
