--- a/src/assets/scss/00_base/_settings.scss
+++ b/src/assets/scss/00_base/_settings.scss
@@ -14,10 +14,14 @@ $no-gutter-grid: (
   .o-rhythm__container {
       box-sizing: border-box;
       padding: 0 32px;
+
+      &.-fluid {
+        padding: 0;
+      }
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 1280px) {
   .o-rhythm__container {
     &.-full-width {
       &__mobile {
@@ -32,6 +36,10 @@ $no-gutter-grid: (
   .o-rhythm__container {
       box-sizing: border-box;
       padding: 0 32px;
+
+      &.-fluid {
+        padding: 0;
+      }
   }
 }
 
