--- a/src/assets/scss/02_molecule/_case-study.scss
+++ b/src/assets/scss/02_molecule/_case-study.scss
@@ -1,11 +1,25 @@
 .m-case-study {
     position: relative;
     padding: 60px 0;
-    border-top: 2px solid get-color("neutral", "lighter-gray");
     overflow: hidden;
     margin: 0;
     transition: all 0.6s ease;
     background: white;
+
+    &:before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
+        height: 2px;
+        /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#dfebee+0,000000+100&0.65+0,0+100 */
+        background: -moz-radial-gradient(center, ellipse cover, rgba(223,235,238,0.65) 0%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
+        background: -webkit-radial-gradient(center, ellipse cover, rgba(223,235,238,0.65) 0%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
+        background: radial-gradient(ellipse at center, rgba(223,235,238,0.65) 0%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6dfebee', endColorstr='#00000000',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+    }
 
     @include breakpoints("tablet") {
         padding: 0;
@@ -73,7 +87,8 @@
     }
 
     &__content {
-        @include span-col(12);
+        width: 100%; 
+        float: none;
 
         &-inner {
 
@@ -83,17 +98,20 @@
         }
 
         @include breakpoints("tablet") {
-            @include span-col(6);
+            width: 50%; 
+            float: left;
         }
     }
 
     &__image-container {
-        @include span-col(12);
+        width: 100%; 
+        float: none;
         position: relative;
 
         @include breakpoints("tablet") {
-            @include span-col(6);
             margin-bottom: 0;
+            width: 50%; 
+            float: right;
         }
     }
 
@@ -120,7 +138,7 @@
         @include breakpoints("tablet") {
             position: absolute !important;
             top: 50%;
-            transform: translateY(-50%);
+            transform: translateY(-28%);
             max-width: 100%;
         }
 
@@ -163,7 +181,8 @@
         @include font-size("smaller");
         color: get-color("secondary", "center-lane");
         border-color: get-color("secondary", "center-lane");
-        letter-spacing: .1em;
+        letter-spacing: .15em;
+        padding-bottom: 2px;
 
         @include breakpoints("tablet") {
             @include font-size("smallest");
@@ -171,9 +190,9 @@
     }
 
     h5 {
-        @include font-size("small");
+        @include font-size(18px);
         @include line-height("medium-large"); 
-        color: get-color("neutral", "gray"); 
+        color: get-color("primary", "after-hours"); 
         font-family: $font-secondary;
         text-transform: uppercase;
         letter-spacing: 0.2em;
@@ -185,10 +204,9 @@
     }
 
     p {
-        @include font-size(48); 
-        @include line-height("larger"); 
-        color: get-color("neutral", "gray"); 
-        margin: 15px 0 25px;
+        @include font-size(42px); 
+        @include line-height(48px); 
+        margin: 0 0 16px 0;
 
         @include breakpoints("tablet") {
             @include font-size("larger");
