--- a/src/assets/scss/02_molecule/_contact-info.scss
+++ b/src/assets/scss/02_molecule/_contact-info.scss
@@ -20,20 +20,11 @@
             font-family: $font-primary;
             font-weight: 100;
             color: get-color("primary", "white");
-            display: inline-block;
+            display: inline;
             margin-bottom: 20px;
             position: relative;
-
-            &::after {
-                content: "";
-                display: block;
-                position: absolute;
-                height: 1px;
-                left: 0;
-                right: 0;
-                bottom: 0;
-                background: get-color("primary", "white");
-            }
+            text-decoration: none;
+            border-bottom: 1px solid get-color("primary", "white");
         }
     }
 
@@ -48,11 +39,7 @@
             display: inline-block;
             width: 20px;
             height: 20px;
-            margin-right: 36px;
-
-            @include breakpoints("tablet") {
-                margin-right: 20px;
-            }
+            margin-right: 20px;
 
             svg {
                 fill: get-color("neutral", "light-gray");
@@ -62,7 +49,7 @@
             &:hover {
 
                 svg {
-                    fill: get-color("neutral", "gray");
+                    opacity: .6;
                 }
             }
         }
