Inserted the synthesis section.

--- a/src/assets/scss/02_molecule/_case-study-page-content.scss
+++ b/src/assets/scss/02_molecule/_case-study-page-content.scss
@@ -42,7 +42,7 @@
             }
         }
 
-        .research {
+        .content {
             &__header {
                 @include span-col(1);
                 color: get-color("neutral", "medium-gray");
