fixing push columns in case studies

--- a/src/assets/scss/00_base/__base.scss
+++ b/src/assets/scss/00_base/__base.scss
@@ -1,9 +1,9 @@
 /*------------------------------------*\
   BASE
 \*------------------------------------*/
-@import "settings",
+@import "functions",
+        "mixins",
+        "settings",
         "colors",
-        "root",
-        "functions",
-        "mixins", 
-        "typography";
+        "typography",
+        "root";
