--- a/src/assets/scss/00_base/_root.scss
+++ b/src/assets/scss/00_base/_root.scss
@@ -5,3 +5,19 @@ body {
 img {
     max-width: 100%;
 }
+
+.-push-one {
+    @include span-col(12);
+
+    @include breakpoints("tablet") {
+        @include span-col(8);
+        @include push-col(1);
+    }
+  }
+  
+  .-push-three {
+  
+    @include breakpoints("tablet") {
+        @include push-col(3);
+    }
+  }
