updated one image on pulse case study and added mobile styles

--- a/src/assets/scss/00_base/_root.scss
+++ b/src/assets/scss/00_base/_root.scss
@@ -21,3 +21,19 @@ img {
         @include push-col(3);
     }
   }
+
+  .-mobile-only {
+      display: block;
+
+    @include breakpoints("tablet") {
+        display: none;
+    }
+  }
+
+  .-desktop-only {
+      display: none;
+
+    @include breakpoints("tablet") {
+        display: block;
+    }
+  }
