--- a/src/assets/scss/02_molecule/_case-study-page-content.scss
+++ b/src/assets/scss/02_molecule/_case-study-page-content.scss
@@ -67,6 +67,22 @@
                 position: absolute;
                 left: -18px;
             }
+
+            &__right {
+                position: relative;
+
+                &:after {
+                    content: '';
+                    background: url('../../../static/img/asterisk.png') no-repeat center center / contain;
+                    height: 12px;
+                    width: 12px;
+                    display: inline-block;
+                    vertical-align: top;
+                    margin-right: 10px;
+                    position: absolute;
+                    right: -18px;
+                }
+            }
         }
 
         .content {
