--- a/src/assets/scss/03_organism/_hero.scss
+++ b/src/assets/scss/03_organism/_hero.scss
@@ -97,7 +97,7 @@
             }
 
             @include breakpoints("tablet") {
-                padding: 270px;
+                padding: 270px 0;
             }
         }
     }
