More work on the Kids discovery work study.

--- a/src/assets/scss/02_molecule/_case-study-page-content.scss
+++ b/src/assets/scss/02_molecule/_case-study-page-content.scss
@@ -86,6 +86,15 @@
         }
 
         .content {
+            &__easter-egg {
+                @include span-col(12);
+
+                @include breakpoints("tablet") {
+                    @include span-col(2);
+                    @include push-col(1);
+                }
+            }
+
 
             &__header {
                 @include span-col(2);
