--- a/src/assets/scss/02_molecule/_case-study-page-content.scss
+++ b/src/assets/scss/02_molecule/_case-study-page-content.scss
@@ -80,6 +80,7 @@
                 @include breakpoints("tablet") {
                     top: 280px;
                     right: -40px;
+                    left: auto;
                 }
             }
 
